Add eval on dev set and loading from ckpts

--- a/.gitignore
+++ b/.gitignore
@@ -15,8 +15,8 @@ allennlp/glove
 fastqa.aof
 
 # TensorFlow
-rl/checkpoints
-rl/summaries
+rl/**/checkpoints
+rl/**/summaries
 
 # Mac OS X
 */.DS_Store
