Separate fastqa/bidaf caching in baselines/templates

--- a/rc/redis/redis.conf
+++ b/rc/redis/redis.conf
@@ -1,6 +1,6 @@
 dir rc/redis/v1.1
 appendonly yes
-appendfilename "fastqa.aof"
+appendfilename "fastqa_bidaf.aof"
 dbfilename fastqa.rdb
 maxmemory 2gb
 maxmemory-policy allkeys-lru
